force-app/main/default/objects/Aerovia__c/Aerovia__c.object-meta.xml
<CustomObject>
    <label>Aerovia</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aerovias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>