force-app/main/default/objects/Aerovia__c/fields/CodigoOrigem__c.field-meta.xml
<CustomField>
    <fullName>CodigoOrigem__c</fullName>
    <formula>Origem__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da Origem</label>
    <type>Text</type>
</CustomField>