force-app/main/default/objects/Aerovia__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Aerovias (Destino)</relationshipLabel>
    <relationshipName>AeroviasDestino</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>