force-app/main/default/objects/Aerovia__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Aerovias (Origem)</relationshipLabel>
    <relationshipName>AeroviasOrigem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>