force-app/main/default/objects/Aerovia__c/fields/Volta__c.field-meta.xml
<CustomField>
    <fullName>Volta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volta</label>
    <referenceTo>Aerovia__c</referenceTo>
    <relationshipLabel>Aerovias</relationshipLabel>
    <relationshipName>AeroviasVolta</relationshipName>
    <type>Lookup</type>
</CustomField>