force-app/main/default/objects/Aerovia__c/validationRules/DestinoNaoPodeSerAlterado.validationRule-meta.xml
<ValidationRule>
    <fullName>DestinoNaoPodeSerAlterado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				ISCHANGED(Destino__c)
)</errorConditionFormula>
    <errorMessage>Não é possível alterar o destino de uma aerovia. Para realizar esse tipo de operação, exclua a aerovia e crie uma nova.</errorMessage>
</ValidationRule>