force-app/main/default/objects/Aerovia__c/validationRules/OrigemDestinoDiferente.validationRule-meta.xml
<ValidationRule>
    <fullName>OrigemDestinoDiferente</fullName>
    <active>true</active>
    <errorConditionFormula>Origem__c  = Destino__c</errorConditionFormula>
    <errorDisplayField>Destino__c</errorDisplayField>
    <errorMessage>Uma aerovia deve possui a origem diferente do destino</errorMessage>
</ValidationRule>