force-app/main/default/objects/Aerovia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoOrigem__c</columns>
    <columns>CodigoDestino__c</columns>
    <columns>Tipo__c</columns>
    <columns>Volta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>